<resources>
    <string name="app_name">Google.SV.Cardboardviewer</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Location</string>
    <string name="action_normal">Normal View</string>
    <string name="action_satellite">Satellite View</string>
    <string name="action_terrain">Terrain View</string>
    <string name="action_hybrid">Hybrid View</string>
    <string name="action_cardboard">Cardboard View</string>
</resources>
