<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
    <item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:orderInCategory="100" android:showAsAction="always" />
    <item android:id="@+id/action_normal" android:title="@string/action_normal"
        android:orderInCategory="101" android:showAsAction="always" />
    <item android:id="@+id/action_satellite" android:title="@string/action_satellite"
        android:orderInCategory="102" android:showAsAction="always" />
    <item android:id="@+id/action_terrain" android:title="@string/action_terrain"
        android:orderInCategory="103" android:showAsAction="always" />
    <item android:id="@+id/action_hybrid" android:title="@string/action_hybrid"
        android:orderInCategory="104" android:showAsAction="always" />
    <item android:id="@+id/action_cardboard" android:title="@string/action_cardboard"
        android:orderInCategory="105" android:showAsAction="always" />
</menu>
